# localLLm

./: .gitignore  alembic.ini  chroma.ipynb  db.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: be34bff8799e_initial_migration.py
db/528014e5-65ec-4df4-a22b-858788f4660e/: index_metadata.pickle
logs/: logger.py
routes/: chat.py  files.py
schema/: chat.py  files.py
sqlite_db/: models.py  query.py  session.py
util/: files.py  llm.py  vector_store.py
