[project]
name = "localllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "chromadb>=0.6.3",
    "docx2txt>=0.9",
    "fastapi>=0.115.12",
    "langchain-text-splitters>=0.3.8",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "pydantic-ai>=0.2.4",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "ruff>=0.11.10",
    "sqlalchemy[asyncio]>=2.0.41",
    "sse-starlette>=2.3.5",
]
